--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DATABASE_URL="mysql://root:cjh980120@cu-blog.cnawe4w6g75b.ap-northeast-2.rds.amazonaws.com:3306/1mm"
+DATABASE_URL= mysql://root:cjh980120@cu-blog.cnawe4w6g75b.ap-northeast-2.rds.amazonaws.com:3306/1mm
 
 
-GOOGLE_CLIENT_ID ="475061478062-65eog6004jrml4i0th9h70qbnm9k1adb.apps.googleusercontent.com"
+GOOGLE_CLIENT_ID =475061478062-65eog6004jrml4i0th9h70qbnm9k1adb.apps.googleusercontent.com
 
-GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_SECRET=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
 
 
-NEXT_AUTH_SECRET= "whwrkxdmstptkd"
+NEXT_AUTH_SECRET= iRXFyflmClIIJNNRsarA1SrwHqYyu8rr0BO14B7xryQ=
 
-PASS_EMAIL = "jonghyun.devolop@gmail.com"
+PASS_EMAIL = jonghyun.devolop@gmail.com
