--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXT_AUTH_SECRET= iRXFyflmClIIJNNRsarA1SrwHqYyu8rr0BO14B7xryQ=
 
-NEXT_PUBLIC_PASS_EMAIL = jonghyun.devolop@gmail.com
+PASS_EMAIL = jonghyun.devolop@gmail.com
