--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"postbuild": "next-sitemap",
 		"lint": "next lint"
 	},
 	"dependencies": {
@@ -23,11 +22,11 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.379.0",
-		"next": "15.0.0-rc.0",
 		"next-auth": "^4.24.7",
 		"prisma": "^5.14.0",
-		"react": "19.0.0-rc-f994737d14-20240522",
-		"react-dom": "19.0.0-rc-f994737d14-20240522",
+		"react": "^18",
+		"react-dom": "^18",
+		"next": "14.2.3",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
@@ -36,7 +35,7 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
-		"eslint-config-next": "15.0.0-rc.0",
+		"eslint-config-next": "14.2.3",
 		"next-sitemap": "^4.2.3",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
