--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ GOOGLE_CLIENT_SECRET=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
 NEXT_AUTH_SECRET= iRXFyflmClIIJNNRsarA1SrwHqYyu8rr0BO14B7xryQ=
 
 PASS_EMAIL = jonghyun.devolop@gmail.com
+
+CUPANG_SECRET_KEY =76a107be6df52ebd2cac9cfb4fae54b89b4f164e
+
+CUPANG_ACCESS_KEY = c591dcb8-4842-4a98-8c3c-44f9e589f289
