--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,3 @@
-
-
 DATABASE_URL= mysql://root:cjh980120@cu-blog.cnawe4w6g75b.ap-northeast-2.rds.amazonaws.com:3306/1mm
 
 
@@ -16,4 +14,4 @@ CUPANG_SECRET_KEY =76a107be6df52ebd2cac9cfb4fae54b89b4f164e
 
 CUPANG_ACCESS_KEY = c591dcb8-4842-4a98-8c3c-44f9e589f289
 
-URL = http://localhost:3000
+URL = https://1mm.creation.im
