--- a/.env.prod
+++ b/.env.prod
@@ -9,6 +9,7 @@ GOOGLE_CLIENT_SECRET=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
 NEXT_AUTH_SECRET= iRXFyflmClIIJNNRsarA1SrwHqYyu8rr0BO14B7xryQ=
 
 PASS_EMAIL = jonghyun.devolop@gmail.com
+PASS_EMAIL2 = ejback909@gmail.com 
 
 CUPANG_SECRET_KEY =76a107be6df52ebd2cac9cfb4fae54b89b4f164e
 
